all-in-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-app
  labels:
    app: nest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest
  template:
    metadata:
      labels:
        app: nest
    spec:
      containers:
        - name: nest-container
          image: gcr.io/steel-fin-448709-r2/nest-app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nest-service
spec:
  selector:
    app: nest
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
